# Orc_Extract_Cin

backend/: clean_embeddings.py  database.py  deepface_service.py  documents.db  init_face_embeddings.py  main.py  ocr.py  pyproject.toml
backend/face_embeddings/: 1.npy
frontend/: index.html  package-lock.json
frontend/src/: App.jsx  index.css
frontend/src/pages/: ListePage.jsx  OrcPage.jsx
