[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cmake>=4.2.0",
    "databases[aiosqlite]>=0.9.0",
    "fastapi>=0.121.3",
    "groq>=0.37.1",
    "numpy>=2.2.6",
    "opencv-python>=4.12.0.88",
    "opencv-python-headless>=4.12.0.88",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "pydeck>=0.9.1",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.45",
    "streamlit>=1.52.1",
    "uvicorn[standard]>=0.38.0",
]
